--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "mouse-follower": "^1.1.2",
     "npcheck": "^1.0.1",
     "npm-check": "^6.0.1",
-    "nuxt": "^3.12.2",
+    "nuxt": "^3.12.4",
     "sass": "^1.77.6",
     "swiper": "^11.1.4",
     "vue": "^3.4.31",
@@ -31,6 +31,9 @@
   "devDependencies": {
     "@nuxtjs/prismic": "^3.3.1",
     "@slicemachine/adapter-nuxt": "^0.3.42",
-    "slice-machine-ui": "^2.2.1"
+    "@types/node": "^20.14.11",
+    "@types/webpack": "^5.28.5",
+    "slice-machine-ui": "^2.2.1",
+    "typescript": "^5.5.3"
   }
 }
