--- a/package.json
+++ b/package.json
@@ -31,9 +31,6 @@
   "devDependencies": {
     "@nuxtjs/prismic": "^3.3.1",
     "@slicemachine/adapter-nuxt": "^0.3.42",
-    "@types/node": "^20.14.11",
-    "@types/webpack": "^5.28.5",
-    "slice-machine-ui": "^2.2.1",
-    "typescript": "^5.5.3"
+    "slice-machine-ui": "^2.2.1"
   }
 }
