--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "paths": {
       "@/*": ["./*"]
     }
-  }
-  // "include": ["prismicio-types.d.ts", "**/*.ts"]
+  },
+  "include": ["prismicio-types.d.ts", "**/*.ts"]
 }
