--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@nuxt/kit": "^3.12.4",
     "@prismicio/vue": "^4.2.2",
     "@storyblok/nuxt": "^6.0.10",
     "@studio-freight/lenis": "^1.0.42",
